# druidq

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  demo_params_file.py
src/: druidq.py
tests/: demo_params.py  demo_params.sql  demo_params_file.sql  test_druidq.py
