[project]
name = "druidq"
dynamic = ["version"]
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "pydruid[sqlalchemy]",
    "pyarrow>=7.0.0",
    "sqlalchemy>=2.0.0; python_version >= '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a25",
]

[project.scripts]
druidq = "druidq:app"


[tool.uv]
package = true


[tool.setuptools_scm]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
